working on UI in Home page

--- a/style.css
+++ b/style.css
@@ -40,13 +40,13 @@ body {
   }
 }
 
-.column {
+.flex-column {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.row {
+.flex-row {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -59,52 +59,40 @@ li {
   list-style-type: none;
 }
 #wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding-top: 2rem;
+  justify-content: flex-start;
   width: 100vw;
   height: 100vh;
 }
-.section1,
-.section2,
-.section3 {
+#wrapper section {
   width: 80%;
   max-width: 80rem;
+  padding: 6rem 0 0;
 }
-.section1 > * {
-  margin-bottom: 2rem;
+#wrapper section * {
+  margin-bottom: 3.6rem !important;
 }
-#wrapper h1 {
+#wrapper section h1 {
   font-size: 6rem;
   animation-delay: 1s;
 }
-.p2 {
+#wrapper section .p2 {
   animation-delay: 2.5s;
   font-size: 3rem;
 }
-.p3 {
+#wrapper section .p3 {
   animation-delay: 4s;
   font-size: 3rem;
 }
-.p3-1 {
+#wrapper section .p3-1 {
   animation-delay: 5s;
   font-size: 3rem;
 }
-#section1 .p4 {
-  animation-delay: 6s;
+#wrapper section .p4,
+#wrapper section .p5 {
   font-size: 4rem;
   width: 45%;
-  min-width: 20rem;
 }
-#section1 .p5 {
-  animation-delay: 6.7s;
-  font-size: 4rem;
-  width: 45%;
-  min-width: 20rem;
-}
-#wrapper h1,
+#wrapper section h1,
 .p2,
 .p3,
 .p3-1,
@@ -112,59 +100,7 @@ li {
 .p5 {
   font-weight: bolder;
 }
-.btn {
+#wrapper section .btn {
   color: white;
-  font-size: 4rem !important;
-}
-button.yesBtn {
-}
-button.noBtn {
-}
-.section1 {
-  /* display: none; */
-}
-#section1 .p5 {
-  animation-delay: 6.7s;
   font-size: 4rem;
-  width: 45%;
-  min-width: 20rem;
-}
-.section2 {
-  opacity: 1;
-  pointer-events: all;
-}
-.p7,
-.p8,
-button.p9 {
-  color: white;
-  font-size: 4rem !important;
-  width: 30%;
-  min-width: 20rem;
-}
-.p7,
-.p8,
-.p9 {
-  animation-delay: 1s;
-}
-
-.section3 {
-  opacity: 1;
-  pointer-events: all;
-}
-.backBtn {
-  /* position: fixed; */
-  z-index: 100;
-  bottom: 5%;
-  left: 5%;
-}
-.surrBtn {
-  /* position: fixed; */
-  z-index: 100;
-  bottom: 5%;
-  right: 5%;
-}
-
-.playPage {
-  justify-content: space-between !important;
-  align-items: space-between !important;
 }
