--- a/assets/css/play.css
+++ b/assets/css/play.css
@@ -3,11 +3,41 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
 }
+
 #wrapper section .p4,
 #wrapper section .p5,
 #wrapper section .p6 {
   font-size: 6rem;
   overflow: hidden;
+}
+.p4 {
+  animation-delay: 6s;
+}
+.p5 {
+  animation-delay: 6.4s;
+}
+.p6 {
+  animation-delay: 6.8s;
+}
+.ctn-results {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(40%, 30rem));
+  grid-template-rows: repeat(3, 10rem);
+  align-items: center;
+  justify-content: center;
+}
+.ctn-results * {
+  font-weight: bolder;
+  font-size: 6rem;
+}
+.ctn-results .label {
+  animation-delay: 7s;
+}
+.ctn-results .score {
+  animation-delay: 7.2s;
+}
+.ctn-results .results {
+  grid-column: 1/3;
 }
 #wrapper footer {
   position: fixed;
@@ -17,4 +47,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+#wrapper footer a {
+  display: block;
 }
