--- a/style.css
+++ b/style.css
@@ -47,11 +47,17 @@ body {
   align-items: center;
   justify-content: center;
 }
+/* class to add to element to get display flex and flex direction column, center  */
 .flex-row {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+/* class to add to element to get display flex and flex direction row, center  */
+.skip {
+  animation-delay: 0ms;
+}
+/* use dom to add this class to element to skip animation when player don't want to wait that long  */
 a {
   all: unset;
 }
@@ -68,6 +74,7 @@ li {
   width: 80%;
   max-width: 80rem;
   padding: 6rem 0 0;
+  margin: 0 auto 0;
 }
 #wrapper section > * {
   margin-bottom: 2.8rem !important;
