--- a/style.css
+++ b/style.css
@@ -109,3 +109,14 @@ li {
   color: white;
   font-size: 4rem;
 }
+@media (max-width: 500px) {
+  html {
+    font: normal normal normal 8px/1.5 "Shadows Into Light", cursive, sans-serif;
+  }
+}
+@media (min-width: 1500px) {
+  html {
+    font: normal normal normal 12px/1.5 "Shadows Into Light", cursive,
+      sans-serif;
+  }
+}
